Bug 137813 - Status bar shows 'SVG selected' while the actual image based on PDF (so PDF selected)
Summary: Status bar shows 'SVG selected' while the actual image based on PDF (so PDF s...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: low minor
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.1.0
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2020-10-28 08:21 UTC by Telesto
Modified: 2020-11-06 16:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-10-28 08:21:37 UTC
Description:
Status bar shows 'SVG selected' while the actual image based on PDF (so PDF selected)

Steps to Reproduce:
1. open attachment 134456 [details]
2. Click the PDF image (left) with white border
3. Status bar shows SVG while file being PDF

Actual Results:
Status bar shows SVG

Expected Results:
PDF


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 94e6e140491de31c0788c91af855a75a3bb12709
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Heiko Tietze 2020-10-28 08:42:52 UTC
In 6.4 it was "Image" but now we get "SVG", likely since this is the default in SdrGrafObj::TakeObjNameSingul(). And before I dig deeper it's better to ask Tomaz.
Comment 2 Tomaz Vajngerl 2020-10-28 15:54:53 UTC
Yeah, SVG is default in the switch, as PDF isn't handled.
 
I would remove the default and handle all cases. If there is no default in the switch and we add a new entry into VectorGraphicDataType, then the compiler will complain with a warning and that's what we want in this case.
Comment 3 Commit Notification 2020-11-02 08:37:51 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/22c88a039a557343ab11fbf7abc8f2a087e1a3c2

Resolves tdf#137813 - Status bar info 'PDF selected'

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-11-06 16:10:57 UTC
Verified in

Version: 7.1.0.0.alpha1+
Build ID: 9c8ed8c8526b9b696d0bf592eb7d963950f3cef4
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Heiko, thanks for fixing this issue!!