Resolves tdf#137813 - Status bar info 'PDF selected'

Change-Id: I60cc75dfe8e63d7d545211a9bf58efc9d34d51ac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104996
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>